# ilk-lang

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC-REVIEW.md  evolution-spec.md  ilk-spec.md  index.html  kli-spec.md  plan.md  plan_refine.md  review.md  review2.md  schema.md  spec.md
.github/workflows/: ci.yml  deploy.yml
docs/: .gitignore  examples.md  ilk-spec.md  index.html  index.md  kli-spec.md  package-lock.json  package.json  playground.md
docs-site/: index.html
docs/.vitepress/: config.mts
examples/: change-ex.kli  crud.ilk  dcb-board-instance-valid.kli  dcb-board-spec.ilk  dcb-board.ilk  domain.eml  domain.kli  instance.eml  meta.eml  meta.ilk  schema-invalid.eml  schema-invalid.kli  schema-valid.eml  schema-valid.kli
examples/cart/: actors.ilk  cmdAddItem.ilk  cmdClearCart.ilk  cmdRemoveItem.ilk  createCart.ilk  events.ilk  main.ilk  queryCartState.ilk  tags.ilk  types.ilk  viewCartItems.ilk  viewChangedPrices.ilk  viewOpenCartsWithProducts.ilk  viewProductsInventories.ilk
src/: ARCHITECTURE.md  README.md  ast.rs  emit.rs  emit_schema.rs  error.rs  formatter.rs  lib.rs  main.rs  parser.rs  resolve.rs  span.rs  wasm.rs
src/ilk/: ast.rs  mod.rs  parser.rs  resolve.rs
src/kli/: ast.rs  mod.rs  parser.rs
src/lsp/: completions.rs  diagnostics.rs  hover.rs  (+2 more)
tree-sitter-ilk/: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json  tree-sitter.json
tree-sitter-ilk-kli/: grammar.js  package-lock.json  package.json
tree-sitter-kli/: Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json
(+46 files in other folders)
