[package]
name = "ilk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ilk"
path = "src/main.rs"

[dependencies]
chumsky = "0.10"
ariadne = "0.4"
notify = "6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
