[package]
name = "ilk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ilk"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:tower-lsp", "dep:tokio", "dep:notify"]
wasm = ["dep:wasm-bindgen", "dep:console_error_panic_hook"]

[dependencies]
chumsky = "0.10"
ariadne = "0.4"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"], optional = true }
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
notify = { version = "6", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
